0.45 
 - proxy can be configured with the gui now
 - updated japanese translation (thanks to Daisuke SUZUKI)
 - new preferences dialog layout (thanks Sebastian Heinlein)
 - new filter dialog layout  (thanks Sebastian Heinlein)

0.44
 - two alternative main layouts can be choosen now
 - "clean cache now" implemented" in preferences window
 - the search entry in the main window is interactive again 
 - much improved preferences dialog (thanks to Sebastian Heinlein)
 - new italian translation (thanks  Mauro Colorio and  Luigi Maselli)
 - updated spanish translation (thanks Fco. Javier Fernandez)
 - updated russian translation (thanks  Sviatoslav Sviridov)
 - new belarussian translation (thanks Vital Khilko)
 - updated chinese translation (thanks liu jack)
 - improved main window design (thanks Sebastian Heinlein)
 - added "rpm-dir" repository support (thanks Panu)
 - prepeared a lot of strings for better i18n (thanks Jean-Michel POURE)

0.43
 - the descriptionParser for rpm has changed
   (the actuall parser is configurable now)
 - new find and changes dialog layout, more HIG compliant 
   (thanks to Sebastian Heinlein)
 - more bugfixes in the PkgTreeView and the new sorting code

0.42
 - download percentage is now always calculated correctly 
   (thanks to David Wilson)
 - save selection on "pin", "update" and "proceed" now
 - some bugs fixed in the new sortable tree/list
 - the order of the columns in the treeview is configurable now
 - updated german translation (thanks to Sebastian Heinlein)
 - updated spanish translation (thanks to Javier Serrador)
 - updated japanese translation (thanks to Daisuke SUZUKI)

0.41
 - updated russian translation
 - [debian only] debian package tags support
 - sortable installed size column added
 - "Information" tab now scrollable
    
0.40
 - updated japanese translation
 - new status "Obsolete and locally installed" for status view
 - added depends and provides to the "Find tool" window