@@ -3,6 +3,9 @@
  - updated japanese translation (thanks to Daisuke SUZUKI)
  - new preferences dialog layout (thanks Sebastian Heinlein)
  - new filter dialog layout  (thanks Sebastian Heinlein)
+ - when adding filter, they are called "New Filter 1", "New Filter 2" etc
+ - added "search lack", so that the interactive search does not start 
+   immediately
 
 0.44
  - two alternative main layouts can be choosen now
